@@ -185,30 +185,6 @@ fieldset.operaprefsection { margin-left: 15em }
 .small, .small * { font-size: 94%; }
 table.small { font-size: 100% }
 
-div.townBox {
-    position:relative;
-    float:right;
-    background:White;
-    margin-left:1em;
-    border: 1px solid gray;
-    padding:0.3em;
-    width: 200px;
-    overflow: hidden;
-    clear: right;
-}
-div.townBox dl {
-    padding: 0;
-    margin: 0 0 0.3em 0;
-    font-size: 96%;
-}
-div.townBox dl dt {
-    background: none;
-    margin: 0.4em 0 0 0;
-}
-div.townBox dl dd {
-    margin: 0.1em 0 0 1.1em;
-    background-color: #f3f3f3;
-}
 /* use this instead of #toc for page content */
 .toccolours {
     border:1px solid #aaaaaa;
