@@ -20,8 +20,7 @@ div div.thumbcaption {
 	text-align: right;
 }
 
-div.magnify,
-#div.townBox {
+div.magnify {
 	left: auto;
 	right: 0;
 }
@@ -42,14 +41,6 @@ div.tright, div.floatright, table.floatright {
 }
 div.tleft, div.floatleft, table.floatleft {
 	clear: left;
-}
-div.townBox {
-	margin-left: 0;
-	margin-right: 1em;
-}
-div.townBox dl dd {
-	margin-left: 0;
-	margin-right: 1.1em;
 }
 
 /* Fix link icons */
