@@ -510,30 +510,6 @@ table.rimage {
 	padding: 5px;
 	font-size: 95%;
 }
-div.townBox {
-	position: relative;
-	float: right;
-	background: white;
-	margin-left: 1em;
-	border: 1px solid gray;
-	padding: .3em;
-	width: 200px;
-	overflow: hidden;
-	clear: right;
-}
-div.townBox dl {
-	padding: 0;
-	margin: 0 0 .3em;
-	font-size: 96%;
-}
-div.townBox dl dt {
-	background: none;
-	margin: .4em 0 0;
-}
-div.townBox dl dd {
-	margin: .1em 0 0 1.1em;
-	background-color: #f3f3f3;
-}
 
 /*
 ** edit views etc
@@ -550,7 +526,7 @@ div.townBox dl dd {
 */
 #bodyContent a.external,
 #bodyContent a[href ^="gopher://"] {
-	background: url(external.png) center right no-repeat;
+	background: url(exteg) center right no-repeat;
 	padding-right: 13px;
 }
 #bodyContent a[href ^="https://"],
